# bulbasaur

./: .gitignore  CMakeLists.txt  README.md  bulbasaur.desktop  package-lock.json  package.json
src/: CMakeLists.txt  fileitem.cpp  fileitem.h  filetreemodel.cpp  filetreemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  src.pro
src/translations/: bulbasaur_en.ts  bulbasaur_zh.ts
